[metadata]
name = memdem
author = Yann-Sebastien Tremblay-Johnston
author_email = yanns.tremblay@gmail.com
url = https://github.com/underchemist/memdem
project_urls = 
    Issues = https://github.com/underchemist/memdem/Issues
    Changelog = https://github.com/underchemist/memdem/blob/master/CHANGELOG.md
description = Make use of open global elevation data from [Terrain Tiles](https://registry.opendata.aws/terrain-tiles) to create digital elevation models (DEM) on the fly.
long_description = file: README.md
license = MIT
license_files = LICENSE.txt
platform = any
keywords = geospatial, gis
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = memdem
python_requires = >= 3.6
install_requires = 
    rasterio[s3]
    morecantile

[options.extras_require]
dev = pytest; pytest-cov; setuptools_scm; isort; black; mypy==0.910; pydocstyle